--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,68 @@
 body{
     font-family: 'Open Sans', sans-serif;
 }
+
+header{
+    text-align: center;
+    padding: 20px;
+}
+
+.titolo{
+    text-transform: uppercase;
+}
+
+hr{
+    margin: 10px 0;
+}
+
+.container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.insert{
+    margin-bottom: 20px;
+}
+
+input{
+    padding: 5px;
+    border: none;
+    border-bottom: 2px solid black;
+}
+
+button{
+    padding: 5px 5px;
+    cursor: pointer;
+    background-color: #fff;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+.lista{
+    width: 80%;
+    background-color: rgb(221, 221, 221);
+    border-radius: 10px;
+}
+
+.lista ul{
+    list-style: none;
+}
+
+ul li{
+    padding: 5px 0;
+    border-bottom: 1px solid black;
+    padding: 7px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+ul li:last-child{
+    border-bottom: none;
+}
+
+i{
+    cursor: pointer;
+}
